--- a/eli.html
+++ b/eli.html
@@ -352,7 +352,7 @@
 				<ul class="pull-right breadcrumb">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="">International Programs</a></li>
-					<li class="active">International House</li>
+					<li class="active">English Language Institute</li>
 				</ul>
 			</div>
 		</div><!--/breadcrumbs-->
@@ -382,8 +382,8 @@
 			<div class="tab-pane fade in active" id="home-2">
 				<div class="heading margin-bottom-10">
 				<h2>English Language Institute</h2></div>
-			  <img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-20" src="assets/img/programs/ELI01.jpg" alt="">
-			  <p>The English Language Institute will prepare you for successful university study. When you study English at ELI you become part of the university—your JSU student ID card gives you access to housing, dining, health services, sports and entertainment events.  At ELI, you will enjoy a college experience before you start college!</p>
+			  <img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-20" src="assets/img/programs/ELI01.jpg" alt="ELI Students at the classroom" title="Students at ELI">
+				<p>The English Language Institute will prepare you for successful university study. When you study English at ELI you become part of the university—your JSU student ID card gives you access to housing, dining, health services, sports and entertainment events.</p><p>At ELI, you will enjoy a college experience before you start college!</p>
 		 	 </div>
 		  <div class="tab-pane fade in" id="whatIwillstudy-2">
 				<div class="heading margin-bottom-10">
