[IHOP] Update menu on left

--- a/ihop.html
+++ b/ihop.html
@@ -370,8 +370,8 @@
 						<div class="col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
-								<li><a href="#international" data-toggle="tab"><em class="fa fa-gear"></em> Internationals that want to live at the house</a></li>
-								<li><a href="#Americans" data-toggle="tab"><em class="icon-user"></em> Americans that want to live at the house</a></li>
+								<li><a href="#international" data-toggle="tab"><em class="fa fa-gear"></em> International Students</a></li>
+								<li><a href="#Americans" data-toggle="tab"><em class="icon-user"></em> Americans Students</a></li>
 								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-gear"></em> Apply Now</a></li>
 							</ul>
 						</div>
