--- a/ihop.html
+++ b/ihop.html
@@ -370,29 +370,28 @@
 						<div class="col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
-								<li><a href="#international" data-toggle="tab"><em class="fa fa-gear"></em> International Students</a></li>
+								<li><a href="#international" data-toggle="tab"><em class="fa fa-globe"></em> International Students</a></li>
 								<li><a href="#Americans" data-toggle="tab"><em class="icon-user"></em> Americans Students</a></li>
-								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-gear"></em> Apply Now</a></li>
+								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-check"></em> Apply Now</a></li>
 							</ul>
 						</div>
 	  <div class="col-sm-9">
 		<div class="tab-content">
 				<div class="tab-pane fade in active" id="home-2">
 					<div class="heading margin-bottom-10"><h2>International House</h2></div>
-						<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House01.jpg" alt="">
 						<p>The International House Program began in 1946 with five students from France. Initially, the program focused on languages. Today, there are 40 members of the program - 20 American students and 20 internationals.</p>
+						<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House01.jpg" alt="">	
 						<p>Each international student is from a different country and is roomed with an American student. Though emphasis is still placed on languages, greater importance is now placed on the overall aspects of cultural understanding. Truly, the International House Program provides "A Window on the World" for students at Jacksonville State University and the surrounding community.</p>
-						
 		  		</div>
 				<div class="tab-pane fade in" id="international">
 					<div class="heading margin-bottom-10">
-						<h2>Internationals that want to live at the house</h2></div>
+						<h2>Internationals Students</h2></div>
 							<p>Need information on this section</p>
 						</div>
 
 		  <div class="tab-pane fade in" id="Americans">
 	<div class="heading margin-bottom-10">
-	<h2>Americans</h2></div>										<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House02.jpg" alt="">								
+	<h2>Americans Students</h2></div>										<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House02.jpg" alt="">								
 		  			<p>American students are selected by an application and interview process. Download the application here. If you have trouble downloading the application, please contact the International House.</p>
 					<p>American students usually have a wide variety of majors. Efforts are made so that American students in the program represent the general composition of Jacksonville State University. These students are usually involved in every aspect of college life. Members have been SGA senators, ballerinas, band members, drama students, and members of ROTC, honor societies, professional clubs, and JSU athletics. This diversity provides the international students the opportunity to observe our American culture firsthand.</p>
 					<p>American students in the program pay for their college expenses. There are no extra fees or charges for membership in the International House Program.</p>
