[Ihop] Justify text

--- a/ihop.html
+++ b/ihop.html
@@ -379,9 +379,10 @@
 		<div class="tab-content">
 				<div class="tab-pane fade in active" id="home-2">
 					<div class="heading margin-bottom-10"><h2>International House</h2></div>
+					<div class="text-align: justify text-justify: inner-word">
+						<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House01.jpg" alt="International House student representing Korea">	
 						<p>The International House Program began in 1946 with five students from France. Initially, the program focused on languages. Today, there are 40 members of the program - 20 American students and 20 internationals.</p>
-						<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House01.jpg" alt="">	
-						<p>Each international student is from a different country and is roomed with an American student. Though emphasis is still placed on languages, greater importance is now placed on the overall aspects of cultural understanding. Truly, the International House Program provides "A Window on the World" for students at Jacksonville State University and the surrounding community.</p>
+						<p>Each international student is from a different country and is roomed with an American student. Though emphasis is still placed on languages, greater importance is now placed on the overall aspects of cultural understanding. Truly, the International House Program provides "A Window on the World" for students at Jacksonville State University and the surrounding community.</p></div>
 		  		</div>
 				<div class="tab-pane fade in" id="international">
 					<div class="heading margin-bottom-10">
