IHOP Update link

--- a/ihop.html
+++ b/ihop.html
@@ -393,7 +393,7 @@
 		  <div class="tab-pane fade in" id="Americans">
 	<div class="heading margin-bottom-10">
 	<h2>Americans Students</h2></div>										<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-10" src="assets/img/programs/International-House02.jpg" alt="">								
-		  			<p>American students are selected by an application and interview process. Download the application here. If you have trouble downloading the application, please contact the International House.</p>
+		  			<p>American students are selected by an application and interview process.<a href="http://www.jsu.edu/ihop/docs/American_Student_Application_form.pdf" target="new"> Download the application here</a>. If you have trouble downloading the application, please contact the International House.</p>
 					<p>American students usually have a wide variety of majors. Efforts are made so that American students in the program represent the general composition of Jacksonville State University. These students are usually involved in every aspect of college life. Members have been SGA senators, ballerinas, band members, drama students, and members of ROTC, honor societies, professional clubs, and JSU athletics. This diversity provides the international students the opportunity to observe our American culture firsthand.</p>
 					<p>American students in the program pay for their college expenses. There are no extra fees or charges for membership in the International House Program.</p>
 
