--- a/about.html
+++ b/about.html
@@ -405,7 +405,7 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 		<div class="container content-sm">
 			<div class="text-center margin-bottom-50">
 				<h2 class="title-v2 title-center">General Information</h2>
-				<p class="space-lg-hor">If you are going to use a <span class="color-green">passage of Lorem Ipsum</span>, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making <span class="color-green">this the first</span> true generator on the Internet.</p>
+				<p class="space-lg-hor">Opportunity lies before you. Experience affordable knowledge you can depend on and discover what all JSU is about.</p>
 			</div>
 
 			<div class="row content-boxes-v4 content-boxes-v4-sm margin-bottom-30">
@@ -429,7 +429,7 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 						<a href="https://jsudining.sodexomyway.com/dining-choices/index.html" target="new">Learn More</a>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 md-margin-bottom-40">
 <div class="news-v1-in bg-color-white">
 							<img class="img-responsive" src="assets/img/main/about-06.jpg" alt="">
 						</div><div class="content-boxes-in-v4">
@@ -459,7 +459,7 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 						<a href="http://www.jsu.edu/recsports/Intramuralsports.html" target="new">Learn More</a>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 md-margin-bottom-40">
 							<img class="img-responsive" src="assets/img/main/about-09.jpg" alt="">
 					<div class="content-boxes-in-v4">
 					  <h2>JSU is home for international students from 60+ countries</h2>
