--- a/index.html
+++ b/index.html
@@ -417,14 +417,15 @@
 						<div class="col-md-6">
 							<br><br><br>
 							<div class="headline-left margin-bottom-30">
-								<h2 class="headline-brd"><strong>JSU is going places</strong></h2>
+								<h2 class="headline-brd"><strong>Why choose JSU</strong></h2>
 							  <p>From the moment you step on the campus of Jacksonville State University you’ll discover that you are not the only one invested in your future.</p>
 							</div>
 							<ul class="list-unstyled lists-v2 margin-bottom-30">
-							  <li><i class="fa fa-check"></i> 8,693 students</li>
+							  <li><i class="fa fa-check"></i> 8,650 students</li>
 							  <li><i class="fa fa-check"></i> Student Faculty ratio 18:1</li>
-								<li><i class="fa fa-check"></i> 2 hours from Atlanta, Georgia and 1.5 hours from Birmingham, Alabama</li>
-								<li><i class="fa fa-check"></i> University has accredited programs such as the Association to Advance Collegiate Schools of Businesss, International (AACSB)</li>
+								<li><i class="fa fa-check"></i> Affordable cost of attendance</li>
+								<li><i class="fa fa-check"></i> Close to 750 student employment positons</li>
+								<li><i class="fa fa-check"></i>Located in a safe and quiet town. 2 hours from Atlanta, Georgia and 1.5 hours from Birmingham, Alabama</li>
 							</ul>
 							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html" title="Learn more about JSU" alt="Redirect to learn more about JSU">Learn More About JSU</a>
 						</div><!--/end row-->
