changes on text

--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@
 		<div class="container content">
 			<div class="row">
 				<div class="col-md-6 col-sm-6">
-					<h2 class="title-v2">Welcome Message from the International Programs Director</h2>
+					<h2 class="title-v2">Welcome Message from the International House &amp; Programs Director</h2>
 					<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
 fortunate that we get to serve over 200 international students from Europe, Asia, North and South
 America, Africa, and the Middle East, are enrolled here.</p><p>
@@ -382,7 +382,8 @@ with the entire campus while pursuing your academic goals.</p>
 at Jacksonville State University, takes pride in our belief that we are here to serve our students. We serve
 each individual students with respect and care no matter where they come from. All of our students
 become part of one big Gamecock Family once they come to JSU.
-I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director International Programs<br>Jacksonville State University</p>
+I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
+Director International House &amp; Programs<br>Jacksonville State University</p>
 				</div>
 				<div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-offset-1 col-sm-4">
 					<img class="img-responsive" src="assets/img/index-img/Chandni-Khadka.jpg" alt="">
@@ -395,7 +396,7 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 		<div class="parallax-quote parallax-quote-light parallaxBg">
 			<div class="container">
 				<div class="parallax-quote-in rounded">
-					<p><span class="color-green">JSU is</span> about finding yourself (and other too!).</p>
+					<p><span class="color-green">JSU is</span> about finding yourself (and others too!).</p>
 				</div>
 			</div>
 		</div>
@@ -409,14 +410,21 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 			</div>
 
 			<div class="row content-boxes-v4 content-boxes-v4-sm margin-bottom-30">
-				<div class="col-md-4 md-margin-bottom-40">
+							<div class="col-md-4 md-margin-bottom-40">
+							<img class="img-responsive" src="assets/img/main/about-09.jpg" alt="">
 					<div class="content-boxes-in-v4">
-						<div class="news-v1-in bg-color-white">
-						  <img class="img-responsive" src="assets/img/main/about-04.jpg" alt="">
-						</div>
-					  <h2>Gamecock Express</h2>
-						<p>Jacksonville State University students with a valid JSU ID card have unlimited access to Gamecock Express routes.</p>
-						<a href="http://www.jsu.edu/transit/index.html" target="new">Learn More</a>
+					  <h2>JSU is home for international students from 60+ countries</h2>
+					  <p>JSU has 70 years of tradition of hosting international students from all around the world.</p>
+					  <a href="http://www.jsu.edu/international/index.html" target="new">Learn More</a>
+				  </div>
+				</div>
+				<div class="col-md-4 md-margin-bottom-40">
+<div class="news-v1-in bg-color-white">
+							<img class="img-responsive" src="assets/img/main/about-06.jpg" alt="">
+						</div><div class="content-boxes-in-v4">
+						<h2>Student Organizations</h2>
+						<p> We encourage student involvement through a wide range of diverse campus organizations. </p>
+						<a href="http://www.jsu.edu/studentlife/student_organizations.html" target="new">Learn More</a>
 					</div>
 				</div>
 				<div class="col-md-4 md-margin-bottom-40">
@@ -429,29 +437,23 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 						<a href="https://jsudining.sodexomyway.com/dining-choices/index.html" target="new">Learn More</a>
 					</div>
 				</div>
-				<div class="col-md-4 md-margin-bottom-40">
-<div class="news-v1-in bg-color-white">
-							<img class="img-responsive" src="assets/img/main/about-06.jpg" alt="">
-						</div><div class="content-boxes-in-v4">
-						<h2>Student Organizations</h2>
-						<p> We encourage student involvement through a wide range of diverse campus organizations. </p>
-						<a href="http://www.jsu.edu/studentlife/student_organizations.html" target="new">Learn More</a>
-					</div>
-				</div>
+				
 			</div>
 
 			<hr>
 
 			<div class="row content-boxes-v4 content-boxes-v4-sm margin-bottom-30">
 				<div class="col-md-4 md-margin-bottom-40">
-							<img class="img-responsive" src="assets/img/main/about-07.jpg" alt="">
 					<div class="content-boxes-in-v4">
-						<h2>103 Conference Championships and 6 National Championships</h2>
-						<p>JSU athletics continued to dominate on the field of competition as the Gamecocks won numerous OVC Championships and advanced to NCAA Championships.</p>
-						<a href="http://www.jsugamecocksports.com/" target="new">Learn More</a>
+						<div class="news-v1-in bg-color-white">
+						  <img class="img-responsive" src="assets/img/main/about-04.jpg" alt="">
+						</div>
+					  <h2>Gamecock Express</h2>
+						<p>Jacksonville State University students with a valid JSU ID card have unlimited access to Gamecock Express routes.</p>
+						<a href="http://www.jsu.edu/transit/index.html" target="new">Learn More</a>
 					</div>
 				</div>
-				<div class="col-md-4 md-margin-bottom-40">
+						<div class="col-md-4 md-margin-bottom-40">
 							<img class="img-responsive" src="assets/img/main/about-08.jpg" alt="">
 					<div class="content-boxes-in-v4">
 						<h2>Intramurals and Recreation</h2>
@@ -459,13 +461,13 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director 
 						<a href="http://www.jsu.edu/recsports/Intramuralsports.html" target="new">Learn More</a>
 					</div>
 				</div>
-				<div class="col-md-4 md-margin-bottom-40">
-							<img class="img-responsive" src="assets/img/main/about-09.jpg" alt="">
+						<div class="col-md-4 md-margin-bottom-40">
+							<img class="img-responsive" src="assets/img/main/about-07.jpg" alt="">
 					<div class="content-boxes-in-v4">
-					  <h2>JSU is home for international students from 60+ countries</h2>
-					  <p>need text </p>
-					  <a href="#">Learn More</a>
-				  </div>
+						<h2>103 Conference Championships and 6 National Championships</h2>
+						<p>JSU athletics continued to dominate on the field of competition as the Gamecocks won numerous OVC Championships and advanced to NCAA Championships.</p>
+						<a href="http://www.jsugamecocksports.com/" target="new">Learn More</a>
+					</div>
 				</div>
 			</div>
 		</div>
