--- a/ihop.html
+++ b/ihop.html
@@ -372,7 +372,7 @@
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
 								<li><a href="#international" data-toggle="tab"><em class="fa fa-globe"></em> International Students</a></li>
 								<li><a href="#Americans" data-toggle="tab"><em class="icon-user"></em> Americans Students</a></li>
-								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-check"></em> Apply Now</a></li>
+								<li><a href="http://www.jsu.edu/ihop/applications.html" target="new"><em class="fa fa-check"></em> Apply Now</a></li>
 							</ul>
 						</div>
 	  <div class="col-sm-9">
@@ -386,8 +386,17 @@
 		  		</div>
 				<div class="tab-pane fade in" id="international">
 					<div class="heading margin-bottom-10">
-						<h2>Internationals Students</h2></div>
-							<p>Need information on this section</p>
+						<h2>International Students</h2></div>
+							<p>International Students from 20 different countries are selected to participate in the International House Programs. International Students accepted to participate are eligible for  'Out-of State Tuition Waiver' and 'Housing Scholarship' for one year provided that students meet the criteria to continue in second semester.
+Pertinent information concerning the International House Program:</p>
+				<p>
+					<ul class="list-unstyled"><li>1. Completed and signed application</li>
+						<li>1. Out-of State Tuition waiver means student will be paying tuition at In-State tuition rate.</li>
+						<li>2. The Scholarship recipient will need funds for transportation to the United States and for the return trip to his/her native country.</li>
+						<li>3. Students are responsible for their personal, social expenses and for expenses that are not covered by the scholarship.</li>
+						<li>4. With very few exceptions, international students cannot work. There is very little work on campus for international students, so funds for personal expenses will be necessary.</li>
+						<li>5. International House members will be expected to spend approximately 5-10 hours per week in forums, seminars, social events, and community groups.</li>
+					</ul></p>
 						</div>
 
 		  <div class="tab-pane fade in" id="Americans">
