changes on text
Justify text on large copies

--- a/ihop.html
+++ b/ihop.html
@@ -387,10 +387,10 @@
 				<div class="tab-pane fade in" id="international">
 					<div class="heading margin-bottom-10">
 						<h2>International Students</h2></div>
-							<p>International Students from 20 different countries are selected to participate in the International House Programs. International Students accepted to participate are eligible for  'Out-of State Tuition Waiver' and 'Housing Scholarship' for one year provided that students meet the criteria to continue in second semester.
+						<p>International Students from 20 different countries are selected to participate in the International House Programs. International Students accepted to participate are eligible for  'Out-of State Tuition Waiver' and 'Housing Scholarship' for one year provided that students meet the criteria to continue in second semester.
 Pertinent information concerning the International House Program:</p>
-				<p>
-					<ul class="list-unstyled"><li>1. Completed and signed application</li>
+						<p>
+					<ul class="list-unstyled">
 						<li>1. Out-of State Tuition waiver means student will be paying tuition at In-State tuition rate.</li>
 						<li>2. The Scholarship recipient will need funds for transportation to the United States and for the return trip to his/her native country.</li>
 						<li>3. Students are responsible for their personal, social expenses and for expenses that are not covered by the scholarship.</li>
