--- a/about.html
+++ b/about.html
@@ -366,24 +366,24 @@
 			<div class="row">
 				<div class="col-md-6 col-sm-6">
 					<h2 class="title-v2">Welcome Message from the International House &amp; Programs Director</h2>
-					<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
+					<p align="justify">We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
 fortunate that we get to serve over 200 international students from Europe, Asia, North and South
-America, Africa, and the Middle East, are enrolled here.</p><p>
+America, Africa, and the Middle East, are enrolled here.</p><p align="justify">
 Our goals remain intact which is to always strive to provide you with an environment in which you can
 easily learn and get exposure to American culture, and in which students from Alabama can learn about
 your culture. JSU has shown a long commitment to an international environment on campus with the
 establishment in 1946 of one of the first International House Programs in the country. Today, we are
 proud to continue this tradition.</p>
-<p>We undoubtedly live in a very globally connected world where we have an absolute obligation to provide
+<p align="justify">We undoubtedly live in a very globally connected world where we have an absolute obligation to provide
 inter-cultural opportunity to all of our students including yourself. We therefore, seek to continue
 welcoming our international students from all around the world and give you an opportunity to engage
 with the entire campus while pursuing your academic goals.</p>
-<p>As a former International student, I understand the need for students to feel accepted and cared for. We
+<p align="justify">As a former International student, I understand the need for students to feel accepted and cared for. We
 at Jacksonville State University, takes pride in our belief that we are here to serve our students. We serve
 each individual students with respect and care no matter where they come from. All of our students
 become part of one big Gamecock Family once they come to JSU.
 I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
-Director International House &amp; Programs<br>Jacksonville State University</p>
+						Director International House &amp; Programs<br>Jacksonville State University</p>
 				</div>
 				<div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-offset-1 col-sm-4">
 					<img class="img-responsive" src="assets/img/index-img/Chandni-Khadka.jpg" alt="">
