--- a/undergraduate.html
+++ b/undergraduate.html
@@ -372,7 +372,7 @@
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
 							  <li><a href="#profile-2" data-toggle="tab"><em class="fa fa-cloud"></em> Accreditation</a></li>
 								<li><a href="#messages-2" data-toggle="tab"><em class="fa fa-comments"></em> Education Curriculum</a></li>
-								<li><a href="#settings-2" data-toggle="tab"><em class="fa fa-gear"></em> Schools and Majors</a></li>
+								<li><a href="#settings-2" data-toggle="tab"><em class="fa fa-education"></em> Schools and Majors</a></li>
 								<li><a href="#StudentLife-2" data-toggle="tab"><em class="fa fa-gear"></em> Student Life</a></li>
 								<li><a href="#AfterGraduation-2" data-toggle="tab"><em class="icon-user"></em> After Graduation</a></li>
 								<li><a href="#EnglishRequirements-2" data-toggle="tab"><em class="fa fa-gear"></em> English Requirements</a></li>
