--- a/undergraduate.html
+++ b/undergraduate.html
@@ -370,16 +370,16 @@
 						<div class="col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
-							  <li><a href="#profile-2" data-toggle="tab"><em class="fa fa-cloud"></em> Accreditation</a></li>
-								<li><a href="#messages-2" data-toggle="tab"><em class="fa fa-comments"></em> Education Curriculum</a></li>
-								<li><a href="#settings-2" data-toggle="tab"><em class="fa fa-education"></em> Schools and Majors</a></li>
-								<li><a href="#StudentLife-2" data-toggle="tab"><em class="fa fa-gear"></em> Student Life</a></li>
-								<li><a href="#AfterGraduation-2" data-toggle="tab"><em class="icon-user"></em> After Graduation</a></li>
-								<li><a href="#EnglishRequirements-2" data-toggle="tab"><em class="fa fa-gear"></em> English Requirements</a></li>
-								<li><a href="#Tuition-and-requirements-2" data-toggle="tab"><em class="fa fa-gear"></em> Tuition and Fees</a></li>
-								<li><a href="#Transfer-2" data-toggle="tab"><em class="fa fa-gear"></em> Transfer</a></li>
-								<li><a href="#Important-Dates-2" data-toggle="tab"><em class ="fa fa-gear"></em> Important Dates</a></li>
-								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-gear"></em> Apply Now</a></li>
+							  <li><a href="#profile-2" data-toggle="tab"><em class="fa fa-trophy"></em> Accreditation</a></li>
+								<li><a href="#messages-2" data-toggle="tab"><em class="fa fa-file"></em> Education Curriculum</a></li>
+								<li><a href="#settings-2" data-toggle="tab"><em class="fa fa-university"></em> Schools and Majors</a></li>
+								<li><a href="#StudentLife-2" data-toggle="tab"><em class="fa fa-group"></em> Student Life</a></li>
+								<li><a href="#AfterGraduation-2" data-toggle="tab"><em class="fa fa-graduation-cap"></em> After Graduation</a></li>
+								<li><a href="#EnglishRequirements-2" data-toggle="tab"><em class="fa fa-language"></em> English Requirements</a></li>
+								<li><a href="#Tuition-and-requirements-2" data-toggle="tab"><em class="fa fa-money"></em> Tuition and Fees</a></li>
+								<li><a href="#Transfer-2" data-toggle="tab"><em class="fa fa-refresh"></em> Transfer</a></li>
+								<li><a href="#Important-Dates-2" data-toggle="tab"><em class ="fa fa-calendar"></em> Important Dates</a></li>
+								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-check"></em> Apply Now</a></li>
 							</ul>
 						</div>
 	  <div class="col-sm-9">
@@ -462,7 +462,7 @@ Management and Marketing</a></li><li><a href="http://jsu.edu/biology/index.html"
 									<p>In order to ensure your academic success at JSU, we ask for proof of English proficiency test score. You will have many options to choose from when it comes to taking the English proficiency test. Some of the popular ones are TOEFL, IELTS, PTE, iTEP etc.</p>
 									
 										<!--Basic Table-->
-					<div class="panel panel-green margin-bottom-40">
+					<div class="panel panel-red margin-bottom-40">
 						<div class="panel-heading">
 						  <h3 class="panel-title"><em class="fa fa-tasks"></em> Basic Information for English Requirements</h3>
 						</div>
@@ -543,7 +543,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 									<p>JSU understands that cost is one of the main concern for many of our bright international students. Here at JSU, you will be able to get the quality education at an affordable cost.</p>
 									<p>We have chart below on tuition and fees for you to review and consider your decision.</p>
 											<!--Basic Table-->
-					<div class="panel panel-green margin-bottom-40">
+					<div class="panel panel-red margin-bottom-40">
 						<div class="panel-heading">
 						  <h3 class="panel-title"><em class="fa fa-tasks"></em> Tuition & Fees</h3>
 						</div>
@@ -600,17 +600,13 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 						</table>
 						<div class="panel-body">
 							<p><strong>Living Expenses</strong></p>
-							<p>Cost of living in this beautiful town of Jacksonville is 3% lower than the Alabama average and 13% lower than the national average. For example, you will be able to rent your own place or live on campus for about $550.00 a month. Check the facts on <a href="http://www.areavibes.com/jacksonville-al/cost-of-living/" target="new">AreaVibes</a></p>
+							<p>Cost of living in this beautiful town of Jacksonville is 3% lower than the Alabama average and 12% lower than the national average. For example, you will be able to rent your own place or live on campus for about $550.00 a month. Check the facts on <a href="http://www.areavibes.com/jacksonville-al/cost-of-living/" target="new">AreaVibes</a></p>
 						</div></div>
 					<!--End Basic Table-->				</div>
 									<div class="tab-pane fade in" id="Transfer-2">
 									<div class="heading margin-bottom-10">
 										<h2>Transfer</h2></div>
-										<p>Are you currently enrolled at another institution pursuing your Associate degree or bachelor’s degree program? Let us help you transition to JSU easily.</p> 
-										<p><h4>Students in Associate Degree Program</h4>Congratulations for achieving one of the milestone in higher education if you are in a process to complete Associate degree. We are here to help you achieve a second milestone which will be your bachelor’s degree program.</p> 
-										<p><h4>Students in Bachelor’s Degree program</h4> We are confident that JSU is the right institutions for you that fit your aspirations and resources. We are here to help you with the timely transfer credits process.</p>
-		  								<h4>International College Credit Transfer</h4>
-										<p>In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our <a href=" http://www.jsu.edu/international/international-admissions/undergraduate.html" target="new" title="JSU Course by course evaluation report">webpage</a></p></div>
+										<h2> Review info with transfer pathway programs Dr. P</h2></div>
 		  <div class="tab-pane fade in" id="Important-Dates-2">
 									<div class="heading margin-bottom-10">
 										<h2>Important Dates</h2></div>
