update changes on icons

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -480,7 +480,7 @@ Management and Marketing</a></li><li><a href="http://jsu.edu/biology/index.html"
 						  <tbody>
 								<tr>
 								
-									<td>Completing JSU’s ELI Program <a href="/ELI">(Learn more)</a></td>
+									<td>Completing JSU’s ELI Program <a href="eli.html">(Learn more)</a></td>
 									<td>Level 4</td>
 									<td class="hidden-sm">N/A</td>
 								</tr>
