--- a/about.html
+++ b/about.html
@@ -287,54 +287,12 @@
 								End Stories -->
 								
 								<!-- About -->
-								<li class="dropdown mega-menu-fullwidth">
-									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-										About
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<div class="mega-menu-content">
-												<div class="container">
-													<div class="row">
-														<div class="col-md-4 md-margin-bottom-30">
-															<a href="about.html"><h2>About JSU</h2></a>
-<ul class="dropdown-link-list">
-															<li><a href="#">Welcome</a></li>
-															<li><a href="#GeneralInformation">General Information</a></li>
-															<li><a href="#">Academics</a></li>
-															<li><a href="#">Housing</a></li>											<li><a href="#">Location</a></li>
-															<li><a href="#">Campus Map</a></li>
-															</ul>
-														</div>
-														<div class="col-md-4 md-margin-bottom-30">
-															<a href="connect.html"><h2>Connect</h2></a>
-															<ul class="dropdown-link-list">
-																<li><a href="#">Social Media</a></li>
-																<li><a href="#">Newsletter</a></li>
-																<li><a href="#">Webinars</a></li>
-																<li><a href="#">Visit our Campus</a></li>
-															</ul>
-														</div>
-														<div class="col-md-4 md-margin-bottom-30">
-															<h2>Degree Listing</h2>
-															<ul class="dropdown-link-list">
-																<li><a href="degree-listing-undergraduate.html">Undergraduate</a></li>
-																<li><a href="degree-listing-graduate.html">Graduate</a></li>
-															</ul>
-														</div>
-													</div>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</li>
-								<!-- End Archives -->
+						 <li class="dropdown mega-menu-fullwidth"><a href="about.html">About</a></li>
+								<!-- End About -->
 
-								<!-- Lifestyle -->
-						  <li class="dropdown mega-menu-fullwidth">
-									<a href="apply.html">Apply</a>
-								</li>
-								<!-- End Lifestyle -->
+								<!-- Apply -->
+						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Apply</a></li>
+								<!-- End Apply -->
 
 								
 							</ul>
@@ -354,8 +312,7 @@
 				<h1 class="pull-left">About JSU</h1>
 				<ul class="pull-right breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="">About</a></li>
-					<li class="active">About JSU</li>
+					<li class="active">About</li>
 				</ul>
 			</div>
 		</div><!--/breadcrumbs-->
@@ -510,8 +467,7 @@ I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>
 		<div class="container content-sm">
 			<div class="row">
 <div class="col-sm-12">
-							<h2 class="title-v2 title-center">Academic Schools</h2>
-
+			<h2 class="title-v2 title-center">Academic Schools</h2>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="">
