--- a/graduate.html
+++ b/graduate.html
@@ -287,54 +287,12 @@
 								End Stories -->
 								
 								<!-- About -->
-								<li class="dropdown mega-menu-fullwidth">
-									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-										About
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<div class="mega-menu-content">
-												<div class="container">
-													<div class="row">
-														<div class="col-md-4 md-margin-bottom-30">
-															<a href="about.html"><h2>About JSU</h2></a>
-<ul class="dropdown-link-list">
-															<li><a href="#">Welcome</a></li>
-															<li><a href="#GeneralInformation">General Information</a></li>
-															<li><a href="#">Academics</a></li>
-															<li><a href="#">Housing</a></li>											<li><a href="#">Location</a></li>
-															<li><a href="#">Campus Map</a></li>
-															</ul>
-														</div>
-														<div class="col-md-4 md-margin-bottom-30">
-															<a href="connect.html"><h2>Connect</h2></a>
-															<ul class="dropdown-link-list">
-																<li><a href="#">Social Media</a></li>
-																<li><a href="#">Newsletter</a></li>
-																<li><a href="#">Webinars</a></li>
-																<li><a href="#">Visit our Campus</a></li>
-															</ul>
-														</div>
-														<div class="col-md-4 md-margin-bottom-30">
-															<h2>Degree Listing</h2>
-															<ul class="dropdown-link-list">
-																<li><a href="degree-listing-undergraduate.html">Undergraduate</a></li>
-																<li><a href="degree-listing-graduate.html">Graduate</a></li>
-															</ul>
-														</div>
-													</div>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</li>
-								<!-- End Archives -->
+						 <li class="dropdown mega-menu-fullwidth"><a href="about.html">About</a></li>
+								<!-- End About -->
 
-								<!-- Lifestyle -->
-						  <li class="dropdown mega-menu-fullwidth">
-									<a href="apply.html">Apply</a>
-								</li>
-								<!-- End Lifestyle -->
+								<!-- Apply -->
+						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Apply</a></li>
+								<!-- End Apply -->
 
 								
 							</ul>
@@ -351,7 +309,6 @@
 				<h1 class="pull-left">Graduate</h1>
 				<ul class="pull-right breadcrumb">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="">International Programs</a></li>
 					<li class="active">Graduate</li>
 				</ul>
 			</div>
@@ -361,7 +318,7 @@
 <div class="row margin-bottom-40">
 				<div class="col-md-8 md-margin-bottom-40 col-lg-offset-2 col-md-offset-2">
 					<div class="responsive-video">
-						<iframe src="https://www.youtube.com/embed/WDWBT-7eskU" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+						<iframe src="https://www.youtube.com/embed/FxuGt-NkRLk?list=PLbmBy3P3RUnKBkYterOSJtzzz5nR7OSXR" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 					</div>
 				</div>
 		  </div><!--/row-->
