--- a/contact.html
+++ b/contact.html
@@ -269,7 +269,7 @@
 								<!-- End About -->
 
 								<!-- Apply -->
-						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Apply</a></li>
+						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Contact</a></li>
 								<!-- End Apply -->
 
 								
