--- a/graduate.html
+++ b/graduate.html
@@ -268,8 +268,8 @@
 						 <li class="dropdown mega-menu-fullwidth"><a href="about.html">About</a></li>
 								<!-- End About -->
 
-								<!-- Apply -->
-						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Contact</a></li>
+								<!-- Applsy -->
+						  <li class="dropdown mega-menu-fullwidth"><a href="contact.html">Contact</a></li>
 								<!-- End Apply -->
 
 								
