Update changes on menu and move contact form to a contact page

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,6 @@
 							<div class="topbar-time">JSU International Programs</div>
 							<div class="topbar-toggler"><span class="fa fa-angle-down"></span></div>
 							<ul class="topbar-list topbar-menu">
-								<li><a href="#">Contact</a></li>
 								<li><a href="faq.html">FAQ</a></li>							
 								<!-- Login & Register 
 								<li class="cd-log_reg hidden-sm hidden-md hidden-lg"><strong><a class="cd-signin" href="javascript:void(0);">Login</a></strong></li>
@@ -268,9 +267,9 @@
 						 <li class="dropdown mega-menu-fullwidth"><a href="about.html">About</a></li>
 								<!-- End About -->
 
-								<!-- Apply -->
-						  <li class="dropdown mega-menu-fullwidth"><a href="apply.html">Contact</a></li>
-								<!-- End Apply -->
+								<!-- Contact -->
+						  <li class="dropdown mega-menu-fullwidth"><a href="contact.html">Contact</a></li>
+								<!-- End Contact -->
 
 								
 							</ul>
@@ -286,103 +285,51 @@
 		<!--=== Breadcrumbs v3 ===-->
 		<div class="breadcrumbs-v3 img-v1">
 			<div class="container text-center">
-				<h1>Apply</h1>
+				<h1>Contact</h1>
 			</div><!--/end container-->
 		</div>
 		<!--=== End Breadcrumbs v3 ===-->
-
-		<!--=== Service Block v6 ===-->
-		<div class="container content-sm">
-			<div class="row service-block-v6">
-				<div class="col-md-4 md-margin-bottom-50">
-					<i class="icon-custom rounded-x icon-color-u icon-line icon-question"></i>
-					<div class="service-desc">
-					  <h2>FAQ</h2>
-						<p>Having problems understanding some of the terms? Find the answers to the most frequently asked questions.</p>
-						<a href="faq.html">Learn More</a>
-					</div>
-				</div>
-				<div class="col-md-4 md-margin-bottom-50">
-					<i class="icon-custom rounded-x icon-color-u icon-line icon-folder"></i>
-					<div class="service-desc">
-						<h2>Apply</h2>
-						<p>Ready for you apply, make sure you have the right documentation</p>
-						<a href="#">Learn More</a>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<i class="icon-custom rounded-x icon-color-u icon-line icon-clock"></i>
-					<div class="service-desc">
-						<h2>Application Process</h2>
-						<p>After subtimiting your application what's next?</p>
-						<a href="#">Learn More</a>
-					</div>
-				</div>
-			</div><!--/end row-->
-		</div>
-		<!--=== End Service Block v6 ===-->
 		<!--=== Process v1 ===-->
 		<div class="process-v1 bg-color-light">
 			<div class="container content-sm">
-				<div class="headline-center margin-bottom-60">
-					<h2>Application Process</h2>
-					<p>Phasellus vitae ipsum ex. Etiam eu vestibulum ante. <br> Lorem ipsum <strong>dolor</strong> sit amet, consectetur adipiscing elit. Morbi libero libero, imperdiet fringilla </p>
-				</div>
-				<ul class="list-inline row process-in process-border">
-					<li class="col-sm-3 sm-margin-bottom-50">
-						<div class="process-icon">
-							<i class="rounded-x dot-active"></i>
-						</div>
-						<div class="process-desc">
-						  <h3>Submit</h3>
-						  <p>Donec convallis augue lacus, sit amet imperdiet est auctor dapibus.</p>
-					  </div>
-					</li>
-					<li class="col-sm-3 sm-margin-bottom-50">
-						<div class="process-icon">
-							<i class="rounded-x dot-active"></i>
-						</div>
-						<div class="process-desc">
-							<h3>Aplication Review</h3>
-							<p>Donec convallis augue lacus, sit amet imperdiet est auctor dapibus.</p>
-						</div>
-					</li>
-					<li class="col-sm-3 sm-margin-bottom-50">
-						<div class="process-icon">
-							<i class="rounded-x dot-active"></i>
-						</div>
-						<div class="process-desc">
-							<h3>I-20 and Embassy</h3>
-							<p>Donec convallis augue lacus, sit amet imperdiet est auctor dapibus.</p>
-						</div>
-					</li>
-					<li class="col-sm-3">
-						<div class="process-icon">
-							<i class="rounded-x dot-active"></i>
-						</div>
-						<div class="process-desc">
-							<h3>Arrive to JSU</h3>
-							<p>Donec convallis augue lacus, sit amet imperdiet est auctor dapibus.</p>
-						</div>
-					</li>
-				</ul>
+				<div id="wufoo-p1khln4w0ufxmk5">
+
+</div>
+
+<script type="text/javascript">var p1khln4w0ufxmk5;(function(d, t) {
+
+var s = d.createElement(t), options = {
+
+'userName':'jsuweb',
+
+'formHash':'p1khln4w0ufxmk5',
+
+'autoResize':true,
+
+'height':'954',
+
+'async':true,
+
+'host':'wufoo.com',
+
+'header':'hide',
+
+'ssl':true};
+
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+
+s.onload = s.onreadystatechange = function() {
+
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+
+try { p1khln4w0ufxmk5 = new WufooForm();p1khln4w0ufxmk5.initialize(options);p1khln4w0ufxmk5.display(); } catch (e) {}};
+
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+
+})(document, 'script');</script>
 			</div><!--/end container-->
 		</div>
 		<!--=== End Process v1 ===-->
-			<!--=== Call To Action ===-->
-		<div class="call-action-v1 bg-color-white">
-			<div class="container">
-				<div class="call-action-v1-box">
-					<div class="call-action-v1-in">
-						<h1>Need extra help with your application</h1>
-					</div>
-					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="#portfolio" class="btn-u btn-brd btn-brd-hover btn-u-dark btn-u-block">Connect with recruiter?</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End Call To Action ===-->
 		<!-- InstanceEndEditable -->
 	
 	<!-- InstanceBeginRepeat name="RepeatRegion1" --><!-- InstanceBeginRepeatEntry -->
