--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					  <h1>We are known as <italic>"The Friendliest Campus in the South"</italic></h1>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="#Contact-us-form" id="Contact-us-form" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block" title="Link to contact us form" alt="click and fill up contact form">Contact us</a>
+						<a href="contact.html" id="Contact-us-form" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block" title="Link to contact us form" alt="click and fill up contact form">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -362,7 +362,7 @@
 								<li><i class="fa fa-check"></i> Close to 750 student employment positons</li>
 								<li><i class="fa fa-check"></i>Located in a safe and quiet town. 2 hours from Atlanta, Georgia and 1.5 hours from Birmingham, Alabama</li>
 							</ul>
-							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html" title="Learn more about JSU" alt="Redirect to learn more about JSU">Learn More About JSU</a>
+							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html" title="Learn more about JSU" alt="Redirect to learn more about JSU">Learn More</a>
 						</div><!--/end row-->
 					</div>
 				</div>
@@ -479,95 +479,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Testimonials Part -->
-		
-		<!--=== Content Part ===-->
-	    <a href="#Contact-us-form"></a>
-		<div class="container content">
-			<div class="row margin-bottom-30">
-				<div class="col-md-9 mb-margin-bottom-30 col-lg-offset-1 col-lg-10 col-md-offset-2">
-					<div class="headline"><h2>Contact Form</h2></div>
-					<form action="assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
-					
-					<div id="wufoo-p1khln4w0ufxmk5">
-
-</div>
-
-<script type="text/javascript">var p1khln4w0ufxmk5;(function(d, t) {
-
-var s = d.createElement(t), options = {
-
-'userName':'jsuweb',
-
-'formHash':'p1khln4w0ufxmk5',
-
-'autoResize':true,
-
-'height':'954',
-
-'async':true,
-
-'host':'wufoo.com',
-
-'header':'hide',
-
-'ssl':true};
-
-s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-
-s.onload = s.onreadystatechange = function() {
-
-var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-
-try { p1khln4w0ufxmk5 = new WufooForm();p1khln4w0ufxmk5.initialize(options);p1khln4w0ufxmk5.display(); } catch (e) {}};
-
-var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-
-})(document, 'script');</script>
-					
-					<!--
-						<fieldset class="no-padding">
-							<label>Name <span class="color-red">*</span></label>
-							<div class="row sky-space-20">
-								<div class="col-md-7 col-md-offset-0">
-									<div>
-										<input type="text" name="name" id="name" class="form-control">
-									</div>
-								</div>
-							</div>
-
-							<label>Email <span class="color-red">*</span></label>
-							<div class="row sky-space-20">
-								<div class="col-md-7 col-md-offset-0">
-									<div>
-										<input type="text" name="email" id="email" class="form-control">
-									</div>
-								</div>
-							</div>
-
-							<label>Message <span class="color-red">*</span></label>
-							<div class="row sky-space-20">
-								<div class="col-md-11 col-md-offset-0">
-									<div>
-										<textarea rows="8" name="message" id="message" class="form-control"></textarea>
-									</div>
-								</div>
-							</div>
-
-							<p><button type="submit" class="btn-u">Send Message</button></p>
-						</fieldset>
-
-						<div class="message">
-							<i class="rounded-x fa fa-check"></i>
-							<p>Your message was successfully sent!</p>
-						</div> -->
-					</form>
-				</div><!--/col-md-9-->
-			</div><!--/row-->
-			<!-- End Owl Clients v1 -->
-		</div><!--/container-->
-		<!--=== End Content Part ===-->
- 
 <!-- InstanceEndEditable -->
 	
 	<!-- InstanceBeginRepeat name="RepeatRegion1" --><!-- InstanceBeginRepeatEntry -->
