Update school business page
Pictures and basic links

--- a/business.html
+++ b/business.html
@@ -307,13 +307,13 @@
 						<div class="owl-carousel-v5">
 							<div class="owl-slider-v5">
 								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img12.jpg" alt="">
+									<img class="full-width img-responsive" src="assets/img/schools/business/business01.jpg" alt="">
 								</div>
 								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img16.jpg" alt="">
+									<img class="full-width img-responsive" src="assets/img/schools/business/business02.jpg" alt="">
 								</div>
 								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img22.jpg" alt="">
+									<img class="full-width img-responsive" src="assets/img/schools/business/business03.jpg" alt="">
 								</div>
 							</div>
 						</div>
@@ -321,7 +321,7 @@
 					<!-- End Owl Carousel v5 -->
 					<div class="col-sm-6">
 						<div class="headline-left margin-bottom-40">
-					<h2 class="headline-brd">School of Arts & Humanities</h2>
+					<h2 class="headline-brd">School of Business & Industry</h2>
 				</div><!--/end Headline Left-->
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
 						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p>
@@ -330,35 +330,17 @@
 								<div class="col-sm-5">
 									<ul class="list-unstyled checked-list">
 										<li><a href="http://www.jsu.edu/applied-engineering/index.html"><i class="fa fa-check"></i> Applied Engineering</a></li>
-										<li><i class="fa fa-check"></i> Drama</li>
-										<li><i class="fa fa-check"></i> English</li>
-										<li><i class="fa fa-check"></i> History and Foreign Languages</li>
-										<li><i class="fa fa-check"></i> Music</li>
+										<li><i class="fa fa-check"></i> Communication</li>
+										<li><i class="fa fa-check"></i> Finance, Economics and Accounting</li>
+										<li><i class="fa fa-check"></i> Management and Marketing</li>
 									</ul>
 								</div>
 							</div>
-							  <a href="http://www.jsu.edu/arts-humanities/index.html" target="new" title="Graduate Programs" alt="Visit JSU Arts and H"><button class="btn-u text-uppercase" type="button">Learn More</button></a>
+							  <a href="http://www.jsu.edu/business/" target="new" title="Graduate Programs" alt="Visit JSU School of Business"><button class="btn-u text-uppercase" type="button">Learn More</button></a>
 					   <a href="http://www.jsu.edu/international/international-admissions/programs.html" target="new" title="Degree Listing for International Students" alt="Visit JSU Arts and H"><button class="btn-u text-uppercase" type="button">Degree Listing</button></a>
 					</div>
 				</div><!--/end row-->
   </div><!--/end container-->
-  <!-- Faculty spotlight -->
-  <div class="bg-grey content-sm">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="responsive-video margin-bottom-30">
-							<iframe src="https://www.youtube.com/embed/KfxJlekZJng?list=PLbmBy3P3RUnJgCCQuiRQl7AU3Tem_nLXX" width="530" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<h2 class="title-v2">Faculty Spotlight</h2>
-						<p>Learn how Dr. Nathan Wight shares his thoughts on engaging students, and what it's like to build relationships at JSU, a small campus "with a big school mentality.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Faculty Spotlight -->
   <!-- InstanceEndEditable -->
 	
 	<!-- InstanceBeginRepeat name="RepeatRegion1" --><!-- InstanceBeginRepeatEntry -->
